fix info icon on iphone 5

--- a/applications/primo/custom-styles.scss
+++ b/applications/primo/custom-styles.scss
@@ -210,7 +210,6 @@ uql-connect-footer
 #alert-icon-container {
   background-color: white;
   top: 4px;
-  width: 1em;
   height: 1em;
   overflow: hidden;
   border: none;
@@ -219,7 +218,8 @@ uql-connect-footer
   font-size: 1.4em;
   color: transparent;
   margin-right: 0.2em;
-  margin-left: 0.4em;
+  margin-left: 0.3em;
+  padding-right: 1em;
   position: relative;
 }
 
